syntax = "proto3";

package native_iam_authentication_password;

option go_package = "slamy/openBP/native/iam/authentication/password;native_iam_authentication_password_grpc";

message AuthenticateRequest {
    string namespace = 1;
    string identity = 2;
    string password = 3;
}
message AuthenticateResponse {
    bool authenticated = 1;
}

message CreateOrUpdateRequest {
    string namespace = 1;
    string identity = 2;
    string password = 3;
}
message CreateOrUpdateResponse {}

message DeleteRequest {
    string namespace = 1;
    string identity = 2;
}
message DeleteResponse {}

message ExistRequest {
    string namespace = 1;
    string identity = 2;
}
message ExistResponse {
    bool exist = 1;
}

// Provides API to authentificate identities using password
service IAMAuthenticationPasswordService {
    // Tries to find identity and compare its password.
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
    // Creates or updates identity password for authentification.
    rpc CreateOrUpdate (CreateOrUpdateRequest) returns (CreateOrUpdateResponse);
    // Deletes idenity password. After this action, action can not be authentificated using password.
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    // Checks if password authentification method is defined for specified entity
    rpc Exist (ExistRequest) returns (ExistResponse);
}